src/test/ui/integral-variable-unification-error.stderr
error[E0308]: mismatched types
  --> $DIR/integral-variable-unification-error.rs:3:9
   |
LL |     x = 5.0;
   |         ^^^ expected integer, found floating-point number

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
